# Hl-en-z-vad

./: README.md  jmena.csv  main.py  main.spec  manager.py  pyproject.toml  requirements.txt  spojova.csv  spojova.py  strojni.csv  strojni.py  technicka.csv  technicka.py  vystupss.xlsx  vystupsts.xlsx  vystupts.xlsx
