[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlášení-závad"
version = "1.0.0"
description = "Tkinter aplikace pro hlášení závad"
authors = [
    { name="Tvůj Name", email="email@example.com" }
]
dependencies = ["tk"]
scripts = ["main.py"]

